--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-# Hello World
+# File list for social.smells.causal.modeling repository
 
-## /Testing/
+"Replication Package for Causal Analysis v3.docx" - a single Microsoft Word document describing in detail the steps taken in analyzing the OpenSSL dataset and derived social-smell and productivity metrics. Originally created in February 2022 and lightly updated in November 2022 to ensure the content matches the journal article that it supports.
